--- a/presentation/src/main/res/layout/activity_on_board.xml
+++ b/presentation/src/main/res/layout/activity_on_board.xml
@@ -21,7 +21,7 @@
 
             android:name="androidx.navigation.fragment.NavHostFragment"
             app:defaultNavHost="true"
-            app:navGraph="@navigation/nav_graph"
+            app:navGraph="@navigation/on_board_nav_graph"
             />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
