--- a/presentation/src/main/res/drawable/edit_text.xml
+++ b/presentation/src/main/res/drawable/edit_text.xml
@@ -3,23 +3,17 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:state_focused="true">
         <shape android:shape="rectangle">
-            <stroke
-                android:width="3dp"
-                android:color="@color/base1" />
-            <corners android:radius="4dp"/>
+            <corners android:radius="5dp"/>
             <solid
-                android:color="@color/white" />
+                android:color="@color/base" />
         </shape>
     </item>
     <item android:state_focused="false">
 
         <shape android:shape="rectangle">
-            <stroke
-            android:width="2dp"
-            android:color="@color/base2" />
-            <corners android:radius="4dp"/>
+            <corners android:radius="5dp"/>
             <solid
-                android:color="@color/white" />
+                android:color="@color/base" />
         </shape>
     </item>
 </selector>
