--- a/presentation/src/main/res/layout/activity_on_main.xml
+++ b/presentation/src/main/res/layout/activity_on_main.xml
@@ -21,7 +21,7 @@
             app:layout_constraintTop_toTopOf="parent"
 
             android:name="androidx.navigation.fragment.NavHostFragment"
-            app:navGraph="@navigation/nav_graph"
+            app:navGraph="@navigation/on_main_nav_graph"
             app:defaultNavHost="true" />
 
         <com.google.android.material.bottomnavigation.BottomNavigationView
@@ -30,8 +30,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="#fff"
-            app:itemIconTint="@color/base3"
-            app:itemTextColor="@color/base3"
+            app:itemIconTint="@color/black"
+            app:itemTextColor="@color/base"
             app:itemIconSize="30dp"
             app:layout_constraintTop_toBottomOf="@id/nav_host_on_main"
             app:layout_constraintStart_toStartOf="parent"
