--- a/presentation/src/main/res/layout/fragment_posting.xml
+++ b/presentation/src/main/res/layout/fragment_posting.xml
@@ -11,13 +11,14 @@
     </data>
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:background="@color/black">
 
         <EditText
             android:id="@+id/ev_inp_title"
             android:padding="20dp"
             android:gravity="top"
-            android:hint="제목을 적어주세요"
+            android:hint="title"
             android:inputType="text"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -25,7 +26,8 @@
             android:layout_marginTop="50dp"
             android:text="@={vm.title}"
             android:fontFamily="@font/suite_boldextra"
-
+            android:textColor="@color/black"
+            android:textColorHint="@color/black"
             android:background="@drawable/edit_text"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -35,30 +37,34 @@
         <EditText
             android:padding="20dp"
             android:gravity="top"
-            android:hint="오늘은 어떤 일이 일어나셨는지요?"
+            android:hint="content"
             android:inputType="text"
             android:id="@+id/ev_inp_content"
             android:text="@={vm.content}"
             android:fontFamily="@font/suite_boldextra"
+            android:textColor="@color/black"
+            android:textColorHint="@color/black"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:layout_marginTop="30dp"
-            android:layout_marginBottom="30dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginBottom="5dp"
             android:layout_marginHorizontal="20dp"
             android:background="@drawable/edit_text"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@id/ev_inp_title"
             app:layout_constraintBottom_toTopOf="@id/btn_submit"/>
+
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/btn_submit"
-            android:layout_width="300dp"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="업로드"
+            android:text="UPLOAD"
             android:fontFamily="@font/suite_boldextra"
             android:textSize="20sp"
             android:onClick="@{()->vm.postContent()}"
             android:background="@drawable/button"
+            android:textColor="@color/black"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -66,5 +72,4 @@
             android:stateListAnimator="@null"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
-
 </layout>
