--- a/presentation/src/main/res/layout/fragment_sign_up_or_in.xml
+++ b/presentation/src/main/res/layout/fragment_sign_up_or_in.xml
@@ -10,39 +10,8 @@
     </data>
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-        <TextView
-            android:id="@+id/tv_login"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="70dp"
-            android:text="최고의 중고거래 어플리케이션"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:textSize="30sp"/>
-        <TextView
-            android:id="@+id/tv_good"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="80dp"
-            android:text="지대좋다~"
-            android:rotation="10"
-            app:layout_constraintTop_toBottomOf="@id/tv_login"
-            app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="100dp"
-            android:textSize="30sp"/>
-        <TextView
-            android:id="@+id/tv_nice"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="100dp"
-            android:text="최고다"
-            android:rotation="-10"
-            app:layout_constraintTop_toBottomOf="@id/tv_good"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="100dp"
-            android:textSize="30sp"/>
+        android:layout_height="match_parent"
+        android:background="@color/black">
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/btn_sign_in"
             android:layout_width="300dp"
@@ -51,9 +20,9 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toTopOf="@id/btn_sign_up"
-            android:text="즉시 로그인"
+            android:text="Login"
             android:fontFamily="@font/suite_boldextra"
-            android:textSize="20sp"
+            android:textSize="14sp"
             android:onClick="@{() -> vm.onClickSignIn()}"
             android:background="@drawable/button"
             android:stateListAnimator="@null"
@@ -67,8 +36,8 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             android:fontFamily="@font/suite_boldextra"
-            android:textSize="20sp"
-            android:text="회원가입하기"
+            android:textSize="14sp"
+            android:text="SIGN UP"
             android:onClick="@{() -> vm.onClickSignUp()}"
             android:background="@drawable/button"
             android:stateListAnimator="@null"
