--- a/presentation/src/main/res/menu/menu_bottom_nav.xml
+++ b/presentation/src/main/res/menu/menu_bottom_nav.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
         android:id="@+id/homeFragment"
         android:title=""
-        android:icon="@drawable/ic_home"/>
+        android:icon="@drawable/ic_home" />
     <item
-        android:id="@+id/boardFragment"
+        android:id="@+id/communityFragment"
         android:title=""
         android:icon="@drawable/ic_board"/>
     <item
