--- a/presentation/src/main/res/navigation/on_main_nav_graph.xml
+++ b/presentation/src/main/res/navigation/on_main_nav_graph.xml
@@ -12,11 +12,13 @@
         <action
             android:id="@+id/action_communityFragment_to_postFragment"
             app:destination="@id/postFragment"
-            app:popUpTo="@id/communityFragment" />
+            app:popUpTo="@id/communityFragment"
+            app:popUpToInclusive="true"/>
         <action
             android:id="@+id/action_communityFragment_to_boardFragment"
             app:destination="@id/boardFragment"
-            app:popUpTo="@id/communityFragment"/>
+            app:popUpTo="@id/communityFragment"
+            app:popUpToInclusive="true"/>
     </fragment>
     <fragment
         android:id="@+id/mapFragment"
@@ -47,7 +49,7 @@
         android:id="@+id/boardFragment"
         android:name="com.example.carretmarket.features.community.board.BoardFragment"
         android:label="fragment_board"
-        tools:layout="@layout/fragment_board" >
+        tools:layout="@layout/fragment_board">
         <argument
             android:name="boardId"
             app:argType="long"
