--- a/presentation/src/main/res/layout/fragment_patching.xml
+++ b/presentation/src/main/res/layout/fragment_patching.xml
@@ -3,11 +3,11 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.example.carretmarket.features.community.post.PostingFragment">
+    tools:context="com.example.carretmarket.features.community.board.patch.PatchFragment">
     <data>
         <variable
             name="vm"
-            type="com.example.carretmarket.features.community.post.PostingViewModel" />
+            type="com.example.carretmarket.features.community.board.patch.PatchViewModel" />
     </data>
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -62,7 +62,7 @@
             android:text="UPLOAD"
             android:fontFamily="@font/suite_boldextra"
             android:textSize="20sp"
-            android:onClick="@{()->vm.onClickPostBoard()}"
+            android:onClick="@{()->vm.patchBoard()}"
             android:background="@drawable/button"
             android:textColor="@color/black"
             app:layout_constraintBottom_toBottomOf="parent"
